cabal-version: 2.4

name: explore-core-and-more
version: 0

executable explore-core-and-more
  build-depends:
    base ^>= 4.16 || ^>= 4.17 || ^>= 4.18,
    bytestring ^>= 0.11,
    containers ^>= 0.6,
    megaparsec ^>= 9.3,
    parser-combinators ^>= 1.3,
    pretty-simple ^>= 4.1,
    prettyprinter ^>= 1.7,
    prettyprinter-ansi-terminal ^>= 1.1,
    text ^>= 2.0,
    transformers ^>= 0.6,
  default-extensions:
    BlockArguments
    DeriveFunctor
    DerivingStrategies
    DuplicateRecordFields
    LambdaCase
    NamedFieldPuns
    OverloadedStrings
    PatternSynonyms
    RankNTypes
    ViewPatterns
  ghc-options: -O -threaded -Wall
  hs-source-dirs: .
  main-is: Main.hs
  other-modules: Expr, Pretty, Type
