cabal-version: 2.4

name: explore-core-and-more
version: 0

executable explore-core-and-more
  build-depends:
    base ^>= 4.16 || ^>= 4.17 || ^>= 4.18,
    bytestring ^>= 0.11,
    containers ^>= 0.6,
    generic-lens ^>= 2.2.1,
    lens ^>= 5.2,
    megaparsec ^>= 9.3,
    parser-combinators ^>= 1.3,
    pretty-simple ^>= 4.1,
    prettyprinter ^>= 1.7,
    prettyprinter-ansi-terminal ^>= 1.1,
    process ^>= 1.6.16,
    text ^>= 2.0,
    transformers ^>= 0.6,
  default-extensions:
    BlockArguments
    DataKinds
    DerivingStrategies
    LambdaCase
    OverloadedStrings
    PatternSynonyms
    RankNTypes
    ViewPatterns
  default-language: GHC2021
  ghc-options: -O -threaded -Wall
  hs-source-dirs: .
  main-is: Main.hs
  other-modules: Expr, Pretty, Type
